--- a/build_utils/Cargo.toml
+++ b/build_utils/Cargo.toml
@@ -8,6 +8,6 @@ edition = "2021"
 
 [dependencies]
 home = "*"
-serde_json = "1.0"
+json5 = "*"
 serde = { version = "1.0", features = ["derive"] }
 zip = "*"
