--- a/robot_code/Cargo.toml
+++ b/robot_code/Cargo.toml
@@ -5,4 +5,9 @@ name = "robot_code"
 version = "0.1.0"
 
 [dependencies]
-wpilib_rs = { path = "../wpilib_rs" }
+wpilib_rs = { path = "../wpilib_rs", default-features = false}
+
+
+[features]
+default  = [ "wpilib_rs/simulation" ]
+default_roborio = [ ]
